@@ -15,6 +15,7 @@
             ESP32: update esp-idf to v3.0. BLE support - thanks to @jumjum. Erase flash before flashing. vars now 2500
             ESP8266: rearange rf_cal_sector (fix #1294)
             ESP8266: Wifi.scan() now return authmode as text 
+            ESP32: Fix accidental initialisation of UART3 when switching to Telnet (fix #1362)
 
      1v97 : nRF52: fix NRF.on('connect',...) issue
             STM32: Fix setDeviceClockCmd error for USB.setConsole()
